fix: remove vulnerabilities from CDS

--- a/ui/src/app/views/application/show/home/application.home.html
+++ b/ui/src/app/views/application/show/home/application.home.html
@@ -11,7 +11,7 @@
             </ng-container>
         </ng-container>
         <ng-container *ngIf="dashboards && dashboards.length === 0">
-            <nz-alert nzType="info" nzMessage="No graph to display (vulnerabilities, unit tests)"></nz-alert>
+            <nz-alert nzType="info" nzMessage="No graph to display (unit tests)"></nz-alert>
         </ng-container>
         <ng-container *ngIf="!dashboards">
             <nz-spin nzTip="Loading..."></nz-spin>
